--- a/app.yaml
+++ b/app.yaml
@@ -2,12 +2,17 @@ application: electrons-simonbiggs
 version: 1
 runtime: python27
 api_version: 1
-threadsafe: yes
+threadsafe: true
 
 handlers:
-- url: .*
-  script: guestbook.app
+- url: /stylesheets
+  static_dir: stylesheets
 
+- url: /.*
+  script: guestbook.application
+  
 libraries:
 - name: webapp2
-  version: "2.5.2"
+  version: latest
+- name: jinja2
+  version: latest
